# quadrature

./: quadrature.cabal
src/Math/Quadrature/: Gaussian.hs  Simple.hs
