name:                   quadrature
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                Unspecified
homepage:               https://github.com/mokus0/quadrature

category:               Math, Numerical
synopsis:               Numerical integration (AKA quadrature) routines
description:            Numerical integration (AKA quadrature) routines.  These
                        are presently very simple, just a starting point for
                        any interested developer(s) to tinker with.

source-repository head
  type:                 git
  location:             https://github.com/mokus0/quadrature.git

Library
  hs-source-dirs:       src
  exposed-modules:      Math.Quadrature.Gaussian
                        Math.Quadrature.Simple
  build-depends:        base >= 3, polynomial, vector
